beginning js, keyframes created - speed lollipop animation created

--- a/css/main.css
+++ b/css/main.css
@@ -75,6 +75,42 @@ html {
   z-index: 5;
 }
 
+.paragrine {
+  transform-origin: 211.257px 146.473px;
+  animation: textspin 1s linear;
+  animation-duration: .5s;
+}
+
+.needletail {
+  transform-origin: 211.257px 146.473px;
+  animation: textspin 1s linear;
+  animation-duration: .75s;
+}
+
+.cheetah {
+  transform-origin: 211.257px 146.473px;
+  animation: textspin 1s linear;
+  animation-duration: 1s;
+}
+
+.shark {
+  transform-origin: 211.257px 146.473px;
+  animation: textspin 1s linear;
+  animation-duration: 1.25s;
+}
+
+@keyframes textspin {
+
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(365deg);
+  }
+
+}
+
 @media only screen and (min-width: 38em) {
 
   .elements {
