--- a/css/main.css
+++ b/css/main.css
@@ -111,8 +111,8 @@ html {
 
 }
 
-.bubbleone, .bubbletwo, .bubblethree, .bubblefour, .bubblefive, .bubblesix, .bubbleseven {
-  fill: #f5ca6a;
+.bubbleone, .bubbletwo, .bubblethree, .bubblefour, .bubblefive, .bubblesix, .bubbleseven, .bubbleeight {
+  fill: #def1ee;
 
 /*
   opacity: 1;
@@ -122,6 +122,7 @@ html {
 
 .human, .elephant, .lion, .dolphin, .monkey, .bird {
   opacity: .5;
+  transition: opacity .25s linear;
 }
 
 .human:hover, .elephant:hover, .lion:hover, .dolphin:hover, .monkey:hover, .bird:hover {
